# luminol-renderer

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CMakeLists.txt
lib/: CMakeLists.txt
src/Engine/: CMakeLists.txt  LuminolEngine.cpp  LuminolEngine.hpp  LuminolRenderEngine.cpp  LuminolRenderEngine.hpp
src/Engine/Graphics/: BufferBit.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  GraphicsFactory.cpp  GraphicsFactory.hpp  Light.hpp  LightManager.cpp  LightManager.hpp  Mesh.hpp  Model.hpp  Renderable.cpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  SkyboxPaths.hpp  TexturePaths.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/Engine/Graphics/OpenGL/: OpenGLBufferBit.hpp  OpenGLError.cpp  OpenGLFactory.cpp  OpenGLFactory.hpp  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.hpp  OpenGLIndexBuffer.cpp  OpenGLMesh.cpp  OpenGLMesh.hpp  OpenGLModel.cpp  OpenGLModel.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLSkybox.cpp  OpenGLSkybox.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLTextureFormat.cpp  OpenGLTextureManager.cpp  OpenGLTextureManager.hpp  OpenGLUniformBindingPoints.hpp  OpenGLUniformBuffer.hpp  OpenGLUniforms.hpp  OpenGLVertexArrayObject.cpp  OpenGLVertexArrayObject.hpp  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.hpp
src/Engine/Utilities/: CMakeLists.txt  ImageLoader.cpp  ImageLoader.hpp  ModelLoader.cpp  ModelLoader.hpp  Timer.hpp
src/Engine/Window/: CMakeLists.txt  Window.cpp  Window.hpp
src/LuminolRenderEngine/: CMakeLists.txt  LuminolRenderEngine.cpp  LuminolRenderEngine.hpp
src/LuminolRenderEngine/Demo/: CMakeLists.txt  main.cpp
src/LuminolRenderEngine/Demo/ClusterAabbSmokeTest/: CMakeLists.txt  main.cpp
src/LuminolRenderEngine/Demo/ClusterLightCullSmokeTest/: CMakeLists.txt  main.cpp
src/LuminolRenderEngine/Demo/ComputeSmokeTest/: main.cpp
src/LuminolRenderEngine/Demo/InstancedCube/: CMakeLists.txt  main.cpp
src/LuminolRenderEngine/Demo/InstancedFish/: CMakeLists.txt
src/LuminolRenderEngine/Demo/PBRModel/: CMakeLists.txt  main.cpp
src/LuminolRenderEngine/Demo/Sponza/: CMakeLists.txt  main.cpp
src/LuminolRenderEngine/Demo/Text/: CMakeLists.txt  main.cpp
src/LuminolRenderEngine/Demo/TexturedCube/: CMakeLists.txt  main.cpp
src/LuminolRenderEngine/Demo/TexturedModel/: CMakeLists.txt  main.cpp
src/LuminolRenderEngine/Demo/TexturedQuad/: CMakeLists.txt  main.cpp
src/LuminolRenderEngine/Demo/Triangle/: CMakeLists.txt  main.cpp
src/LuminolRenderEngine/Graphics/: BoundingBox.hpp  BufferBit.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Frustum.cpp  Frustum.hpp  GraphicsApi.hpp  GraphicsFactory.cpp  GraphicsFactory.hpp  Light.hpp  LightManager.cpp  LightManager.hpp  Mesh.hpp  Model.hpp  Renderable.hpp  RenderableManager.cpp  RenderableManager.hpp  Renderer.cpp  Renderer.hpp  TexturePaths.hpp
src/LuminolRenderEngine/Graphics/OpenGL/: CMakeLists.txt  OpenGLAutoExposureRenderPass.cpp  OpenGLAutoExposureRenderPass.hpp  OpenGLBufferBit.cpp  OpenGLBufferBit.hpp  OpenGLColorRenderPass.cpp  OpenGLColorRenderPass.hpp  OpenGLComputeRenderPass.cpp  OpenGLComputeRenderPass.hpp  OpenGLDrawCall.hpp  OpenGLError.cpp  OpenGLError.hpp  OpenGLFactory.cpp  OpenGLFactory.hpp  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.hpp  OpenGLGBufferRenderPass.cpp  OpenGLGBufferRenderPass.hpp  OpenGLHDRRenderPass.cpp  OpenGLHDRRenderPass.hpp  OpenGLIndexBuffer.hpp  OpenGLLightingRenderPass.cpp  OpenGLLightingRenderPass.hpp  OpenGLLuminanceHeatmapRenderPass.cpp  OpenGLLuminanceHeatmapRenderPass.hpp  OpenGLMesh.cpp  OpenGLMesh.hpp  OpenGLModel.cpp  OpenGLModel.hpp  OpenGLPrimitiveRenderPass.cpp  OpenGLPrimitiveRenderPass.hpp  OpenGLRenderPass.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLShaderStorageBuffer.hpp  OpenGLSkybox.cpp  OpenGLSkybox.hpp  OpenGLSkyboxRenderPass.cpp  (+13 more)
src/LuminolRenderEngine/Graphics/SDL_GPU/: CMakeLists.txt  SDL_GPUAmbientOcclusionPass.cpp  SDL_GPUAmbientOcclusionPass.hpp  SDL_GPUBuffer.cpp  SDL_GPUBuffer.hpp  SDL_GPUClusterPass.cpp  SDL_GPUClusterPass.hpp  SDL_GPUCommandBuffer.cpp  SDL_GPUCommandBuffer.hpp  SDL_GPUComputePass.cpp  SDL_GPUComputePass.hpp  SDL_GPUComputePipeline.cpp  SDL_GPUComputePipeline.hpp  SDL_GPUCopyPass.cpp  SDL_GPUCopyPass.hpp  SDL_GPUCullingUtils.cpp  SDL_GPUCullingUtils.hpp  SDL_GPUDevice.cpp  SDL_GPUDevice.hpp  SDL_GPUFactory.cpp  SDL_GPUFactory.hpp  SDL_GPUFont.cpp  SDL_GPUFont.hpp  SDL_GPUGraphicsPipeline.cpp  SDL_GPUGraphicsPipeline.hpp  SDL_GPUHiZPass.cpp  SDL_GPUHiZPass.hpp  SDL_GPUIBLRenderPass.cpp  SDL_GPUIBLRenderPass.hpp  (+42 more)
src/LuminolRenderEngine/Utilities/: CMakeLists.txt  ImageLoader.cpp  ImageLoader.hpp  ModelLoader.cpp  ModelLoader.hpp  PerformanceLogger.cpp  PerformanceLogger.hpp  Timer.cpp
src/LuminolRenderEngine/Window/: CMakeLists.txt  Window.cpp  Window.hpp
tests/Graphics/: CMakeLists.txt  CameraTests.cpp  FrustumTests.cpp  LightManagerTests.cpp  RenderableManagerTests.cpp  SDL_GPUTypeConversionsTests.cpp
tests/SDL_GPU/ClusterAabbSmokeTest/: CMakeLists.txt
tests/SDL_GPU/ClusterLightCullSmokeTest/: CMakeLists.txt  main.cpp
tests/SDL_GPU/ComputeSmokeTest/: CMakeLists.txt
tests/SDL_GPU/CullingUtilsSmokeTest/: CMakeLists.txt  main.cpp
tests/SDL_GPU/GPUProfilingSmokeTest/: CMakeLists.txt  main.cpp
tests/SDL_GPU/HiZSmokeTest/: CMakeLists.txt  main.cpp
tests/SDL_GPU/InstanceCullSmokeTest/: CMakeLists.txt  main.cpp
tests/SystemPerformance/: CMakeLists.txt
tests/SystemPerformance/DynamicInstancesStressTest/: CMakeLists.txt  main.cpp
tests/SystemPerformance/InstancedCubeStressTest/: CMakeLists.txt  main.cpp
tests/SystemPerformance/ManyDrawCallsStressTest/: CMakeLists.txt  main.cpp
tests/SystemPerformance/ManyLightsStressTest/: CMakeLists.txt  main.cpp
tests/SystemPerformance/OcclusionCullingStressTest/: CMakeLists.txt  main.cpp
tests/SystemPerformance/ScreenSpaceReflectionStressTest/: CMakeLists.txt  main.cpp
tests/SystemPerformance/TextRenderingStressTest/: CMakeLists.txt  main.cpp
tests/Utilities/: CMakeLists.txt  ImageLoaderTests.cpp  ModelLoaderTests.cpp
(+61 files in other folders)
