include(get_cpm.cmake)

CPMAddPackage(
    NAME sdl
    GITHUB_REPOSITORY libsdl-org/SDL
    GIT_TAG release-3.4.10
    OPTIONS 
        "SDL_SHARED OFF"
        "SDL_STATIC ON"
        "SDL_TEST_LIBRARY OFF"
        "SDL_TESTS OFF"
        "SDL_INSTALL_TESTS OFF"
    EXCLUDE_FROM_ALL
    SYSTEM
)

CPMAddPackage(
    NAME sdl_shadercross
    GITHUB_REPOSITORY libsdl-org/SDL_shadercross
    GIT_TAG main
    OPTIONS 
        "SDLSHADERCROSS_STATIC ON"
        "SDLSHADERCROSS_SHARED OFF"
        "SDLSHADERCROSS_CLI OFF"
        "SDLSHADERCROSS_SPIRVCROSS_SHARED OFF"
        "SDLSHADERCROSS_VENDORED ON"
    EXCLUDE_FROM_ALL
    SYSTEM
)

CPMAddPackage(
    NAME sdl_ttf
    GITHUB_REPOSITORY libsdl-org/SDL_ttf
    GIT_TAG release-3.2.2
    OPTIONS
        "SDLTTF_VENDORED ON"
        "BUILD_SHARED_LIBS OFF"
        "SDLTTF_SAMPLES OFF"
        "SDLTTF_INSTALL OFF"
    EXCLUDE_FROM_ALL
    SYSTEM
)

CPMAddPackage(
    NAME gsl
    GITHUB_REPOSITORY microsoft/GSL
    GIT_TAG v4.1.0
    EXCLUDE_FROM_ALL
    SYSTEM
)

CPMAddPackage(
    NAME stb
    GITHUB_REPOSITORY nothings/stb
    GIT_TAG master
    DOWNLOAD_ONLY TRUE
    EXCLUDE_FROM_ALL
    SYSTEM
)

add_library(stb INTERFACE)
target_include_directories(stb INTERFACE ${stb_SOURCE_DIR})

CPMAddPackage(
    NAME assimp
    GITHUB_REPOSITORY assimp/assimp
    GIT_TAG v5.4.3
    OPTIONS
        "BUILD_SHARED_LIBS OFF"
        "ASSIMP_BUILD_TESTS OFF"
        "ASSIMP_NO_EXPORT ON"
        "ASSIMP_INSTALL OFF"
        "ASSIMP_BUILD_ALL_IMPORTERS_BY_DEFAULT OFF"
        "ASSIMP_BUILD_FBX_IMPORTER ON"
        "ASSIMP_BUILD_OBJ_IMPORTER ON"
        "ASSIMP_BUILD_GLTF_IMPORTER ON"
    EXCLUDE_FROM_ALL
    SYSTEM
)

CPMAddPackage(
    NAME luminol-maths
    GITHUB_REPOSITORY dante1130/luminol-maths
    GIT_TAG main
    OPTIONS 
        "LUMINOL_MATHS_EXPORT_COMPILE_COMMANDS OFF" 
        "LUMINOL_MATHS_BUILD_DEMO OFF" 
        "LUMINOL_MATHS_BUILD_TESTS OFF"
    EXCLUDE_FROM_ALL
    SYSTEM
)

set(CMAKE_POLICY_VERSION_MINIMUM 3.5)

CPMAddPackage(
    NAME doctest
    GITHUB_REPOSITORY doctest/doctest
    GIT_TAG v2.4.11
    EXCLUDE_FROM_ALL
    SYSTEM
)

unset(CMAKE_POLICY_VERSION_MINIMUM)
