add_subdirectory(InstancedCubeStressTest)
add_subdirectory(ManyLightsStressTest)
add_subdirectory(DynamicInstancesStressTest)
add_subdirectory(ManyDrawCallsStressTest)
add_subdirectory(OcclusionCullingStressTest)
add_subdirectory(ScreenSpaceReflectionStressTest)
add_subdirectory(TextRenderingStressTest)
